--- a/Manifest/manifest.json
+++ b/Manifest/manifest.json
@@ -47,6 +47,10 @@
             {
               "title": "Review introductions",
               "description": "Review introductions"
+            },
+            {
+              "title": "Help",
+              "description": "Take a tour"
             }
           ]
         }
